# Strife-Sisters-Android

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  SoundManager.cpp  SoundManager.h  native-lib.cpp  native-lib.h  pch.h
android/src/main/cpp/PCE/: IPceMapper.h  MemoryOperationType.h  MemoryType.h  PceConsole.cpp  PceConsole.h  PceControlManager.cpp  PceControlManager.h  PceCpu.cpp  PceCpu.h  PceDefaultVideoFilter.h  PceMemoryManager.cpp  PceMemoryManager.h  PcePsg.cpp  PcePsg.h  PcePsgChannel.cpp  PcePsgChannel.h  PceTimer.cpp  PceTimer.h  PceTypes.h  PceVce.cpp  PceVce.h  PceVdc.cpp  PceVdc.h  PceVpc.cpp  PceVpc.h
android/src/main/cpp/Shared/: BaseControlDevice.cpp  BaseControlDevice.h  SettingsType.cpp  SimpleLock.cpp
android/src/main/cpp/Shared/Audio/: SoundMixer.h
android/src/main/cpp/Utilities/: Serializer.h  magic_enum.hpp
android/src/main/kotlin/com/felipecsl/android/: ControllerWrapper.kt  NesGLRenderer.kt  NesGLSurfaceView.kt
android/src/main/kotlin/com/felipecsl/knes/: AudioEngineWrapper.kt  GLSprite.kt
android/src/main/kotlin/com/felipecsl/knes/app/: MainActivity.kt
android/src/main/kotlin/com/laconic/android/: ControllerWrapper.kt  Emulator.kt  ExtensionFunctions.kt  GamepadOverlay.kt  NesGLRenderer.kt  NesGLSurfaceView.kt
android/src/main/kotlin/com/laconic/strifesdroid/: AudioEngineWrapper.kt  ControllerWrapper.kt  Emulator.kt  ExtensionFunctions.kt  GLSprite.kt  GamepadOverlay.kt  NesGLRenderer.kt  NesGLSurfaceView.kt  StrifesApplication.kt  jni.kt
android/src/main/kotlin/com/laconic/strifesdroid/app/: MainActivity.kt
android/src/main/kotlin/com/laconic/util/: RecyclerAdapter.kt
android/src/main/res/drawable/: circle_btn_bg.xml  start_select_bg.xml
android/src/main/res/layout/: activity_main.xml  full_screen_main.xml  gamepad_overlay.xml  text_row_item.xml
android/src/main/res/mipmap-anydpi-v26/: i_button.xml  i_launcher_round.xml
android/src/main/res/values/: settings.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
hyperxengine/: CMakeLists.txt  build.gradle
hyperxengine/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  SoundManager.cpp  SoundManager.h  native-lib.cpp  native-lib.h  pch.h
hyperxengine/src/main/cpp/PCE/: PceConsole.h  PceControlManager.h  PceCpu.cpp  PceCpu.h  PceMemoryManager.cpp  PceMemoryManager.h  PcePsg.cpp  PcePsg.h  PceTimer.h  PceVce.cpp  PceVdc.cpp  PceVpc.cpp  PceVpc.h  Timer.cpp  Timer.h
hyperxengine/src/main/cpp/Shared/: BaseControlDevice.h  ControlDeviceState.cpp  ControlDeviceState.h  SettingsType.h  safe_ptr.h
hyperxengine/src/main/res/layout/: full_screen_main.xml  gamepad_overlay.xml
lib/: build.gradle
pcemulator/: build.gradle
pcemulator/src/main/: AndroidManifest.xml
(+57 files in other folders)
